framec/tests/snapshots/php_snapshots__lifecycle_args.snap
---
source: framec/tests/php_snapshots.rs
expression: "compile_fixture(\"13_lifecycle_args\", \"php\")"
---
<?php

class LifecycleArgsFrameEvent {
    public $_message;
    public $_parameters;

    public function __construct($message, $parameters = null) {
        $this->_message = $message;
        $this->_parameters = $parameters ?? [];
    }
}


class LifecycleArgsFrameContext {
    public $_event;
    public $_return;
    public $_data;
    public $_transitioned;

    public function __construct($event, $defaultReturn = null) {
        $this->_event = $event;
        $this->_return = $defaultReturn;
        $this->_data = [];
        $this->_transitioned = false;
    }
}


class LifecycleArgsCompartment {
    public $state;
    public $state_args;
    public $state_vars;
    public $enter_args;
    public $exit_args;
    public $forward_event;
    public $parent_compartment;

    public function __construct($state, $parent_compartment = null) {
        $this->state = $state;
        $this->state_args = [];
        $this->state_vars = [];
        $this->enter_args = [];
        $this->exit_args = [];
        $this->forward_event = null;
        $this->parent_compartment = $parent_compartment;
    }

    public function copy() {
        $c = new LifecycleArgsCompartment($this->state, $this->parent_compartment);
        $c->state_args = $this->state_args;
        $c->state_vars = $this->state_vars;
        $c->enter_args = $this->enter_args;
        $c->exit_args = $this->exit_args;
        $c->forward_event = $this->forward_event;
        return $c;
    }
}


class LifecycleArgs {
    private $_state_stack;
    private $__compartment;
    private $__next_compartment;
    private $_context_stack;
    public $sum = 0;
    public $label = "";

    public function __construct() {
        $this->_state_stack = [];
        $this->_context_stack = [];
        $this->__compartment = $this->__prepareEnter("Idle", [], []);
        $this->__next_compartment = null;
    }

    public function _frame_init(): void {
        $__e = new LifecycleArgsFrameEvent("$>", $this->__compartment->enter_args);
        $__ctx = new LifecycleArgsFrameContext($__e, null);
        $this->_context_stack[] = $__ctx;
        $this->__kernel($__e);
        array_pop($this->_context_stack);
    }

    public static function _create(): self {
        $c = new self();
        $c->_frame_init();
        return $c;
    }

    public function hsm_chain() {
        return [
            "Idle" => ["Idle"],
            "Active" => ["Active"],
        ];
    }
    private function __prepareEnter($leaf, $state_args, $enter_args) {
        $comp = null;
        foreach ($this->hsm_chain()[$leaf] as $name) {
            $new_comp = new LifecycleArgsCompartment($name);
            $new_comp->state_args = $state_args;
            $new_comp->enter_args = $enter_args;
            $new_comp->parent_compartment = $comp;
            $comp = $new_comp;
        }
        return $comp;
    }

    private function __prepareExit($exit_args) {
        $comp = $this->__compartment;
        while ($comp !== null) {
            $comp->exit_args = $exit_args;
            $comp = $comp->parent_compartment;
        }
    }

    private function __kernel($__e) {
        // Route event to current state.
        $this->__router($__e);
        // Drain any transitions queued by the handler.
        while ($this->__next_compartment !== null) {
            $next_compartment = $this->__next_compartment;
            $this->__next_compartment = null;
            $exit_event = new LifecycleArgsFrameEvent("<$", $this->__compartment->exit_args);
            $this->__router($exit_event);
            $this->__compartment = $next_compartment;
            $forward_event = $next_compartment->forward_event;
            $next_compartment->forward_event = null;
            if ($forward_event === null) {
                $enter_event = new LifecycleArgsFrameEvent("$>", $this->__compartment->enter_args);
                $this->__router($enter_event);
            } else if ($forward_event->_message === "$>") {
                $this->__router($forward_event);
            } else {
                $enter_event = new LifecycleArgsFrameEvent("$>", $this->__compartment->enter_args);
                $this->__router($enter_event);
                $this->__router($forward_event);
            }
            foreach ($this->_context_stack as $ctx) {
                $ctx->_transitioned = true;
            }
        }
    }

    private function __router($__e) {
        $handler_name = "_state_" . $this->__compartment->state;
        if (method_exists($this, $handler_name)) {
            $this->$handler_name($__e, $this->__compartment);
        }
    }

    private function __transition($next_compartment) {
        $this->__next_compartment = $next_compartment;
    }

    public function load($n, $label) {
        $__e = new LifecycleArgsFrameEvent("load", [$n, $label]);
        $__ctx = new LifecycleArgsFrameContext($__e, null);
        $this->_context_stack[] = $__ctx;
        try {
            $this->__kernel($__e);
            return array_pop($this->_context_stack)->_return;
        } catch (\Throwable $__frame_err) {
            array_pop($this->_context_stack);
            throw $__frame_err;
        }
    }

    public function total() {
        $__e = new LifecycleArgsFrameEvent("total", []);
        $__ctx = new LifecycleArgsFrameContext($__e, null);
        $this->_context_stack[] = $__ctx;
        try {
            $this->__kernel($__e);
            return array_pop($this->_context_stack)->_return;
        } catch (\Throwable $__frame_err) {
            array_pop($this->_context_stack);
            throw $__frame_err;
        }
    }

    public function tag() {
        $__e = new LifecycleArgsFrameEvent("tag", []);
        $__ctx = new LifecycleArgsFrameContext($__e, null);
        $this->_context_stack[] = $__ctx;
        try {
            $this->__kernel($__e);
            return array_pop($this->_context_stack)->_return;
        } catch (\Throwable $__frame_err) {
            array_pop($this->_context_stack);
            throw $__frame_err;
        }
    }

    private function _state_Idle($__e, $compartment) {
        if ($__e->_message == "load") {
            $this->_s_Idle_hdl_user_load($__e, $compartment);
            return;
        }
    }

    private function _state_Active($__e, $compartment) {
        if ($__e->_message == "$>") {
            $this->_s_Active_hdl_frame_enter($__e, $compartment);
            return;
        }
        if ($__e->_message == "tag") {
            $this->_s_Active_hdl_user_tag($__e, $compartment);
            return;
        }
        if ($__e->_message == "total") {
            $this->_s_Active_hdl_user_total($__e, $compartment);
            return;
        }
    }

    private function _s_Idle_hdl_user_load($__e, $compartment) {
        $n = $__e->_parameters[0];
        $label = $__e->_parameters[1];
        $__compartment = $this->__prepareEnter("Active", [], [$n, $label]);
        $this->__transition($__compartment);
        return;
    }

    private function _s_Active_hdl_frame_enter($__e, $compartment) {
        $count = $compartment->enter_args[0];
        $name = $compartment->enter_args[1];
        $this->sum = count + 1;
        $this->label = name;
    }

    private function _s_Active_hdl_user_tag($__e, $compartment) {
        $this->_context_stack[count($this->_context_stack) - 1]->_return = $this->label;
                        return;
    }

    private function _s_Active_hdl_user_total($__e, $compartment) {
        $this->_context_stack[count($this->_context_stack) - 1]->_return = $this->sum;
                        return;
    }
}
